tests/codegen/compile/runtime/fail/missing_args.stderr
error: Missing field `executor_entrypoint`

error: Invalid arguments
 --> $DIR/missing_args.rs:3:1
  |
3 | #[runtime]
  | ^^^^^^^^^^
